--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -80,6 +80,8 @@
 
 В контекста на предмета това демонстрира пълния технологичен цикъл: дефиниране на схема с ключове и референции, използване на непарснати XML ентитети за изображения, трансформация на съдържанието с XSLT директно в браузър и добавяне на динамика с JavaScript за търсене, филтриране и сортиране. Решението използва единичен XML документ с три основни колекции (жанрове, компании, игри), който се валидира срещу XML Schema с ключове и keyref зависимости (ID/IDREF и композитен ключ за компаниите). Изображенията са свързани чрез непарснати ентитети, за да се осигури ясна връзка между данните и графичните ресурси. Визуализацията е изцяло клиентска: XSLT оформя HTML таблица, CSS придава стил, а JavaScript реализира интерактивните функции.
 
+Проектът е актуален като учебен пример за XML-first подход: показва цялата верига от модел и схема, през валидация, до клиентска трансформация без бекенд. Проблемът, който се адресира, е нуждата от консистентно и валидируемо представяне на богати данни за видеоигри с възможност за офлайн визуализация и интерактивност директно в браузъра.
+
 Останалата част от документа е структурирана така: раздел \ref{sec:analysis} описва работния процес и структурата на съдържанието; раздел \ref{sec:design} разглежда дизайна и архитектурата на решението; раздел \ref{sec:ai} описва използването на изкуствен интелект в процеса; раздел \ref{sec:testing} представя тестването и резултатите; раздел \ref{sec:conclusion} обобщава заключенията и очертава възможности за бъдещо развитие; раздели \ref{sec:work-distribution}–\ref{sec:appendix} съдържат разпределението на работата, източниците и апендикси.
 
 \textbf{Цели и критерии за успех:}
@@ -211,6 +213,8 @@
 \end{enumerate}
 
 \textbf{Разширяемост}: нова игра изисква добавяне на елемент в \texttt{games}, валиден \texttt{genreId} към \texttt{genres}, референции към компании и, при ново изображение, обновяване на \texttt{DOCTYPE} и XSD \texttt{enum}. Ако се въведат поджанрове, може да се добави \texttt{parentId} и нови \texttt{key}/\texttt{keyref}. За платформи може да се дефинира отделна колекция с \texttt{enum}, за да се избегнат свободни текстове.
+
+\textbf{Вид на крайния резултат}: едностраничен HTML с таблица на игрите, интерактивни контроли (търсене, филтър по жанр, сортиране), зареждан през локален сървър, с изображения от ENTITY.
 
 \subsection{Тип и представяне на съдържанието}
 Съдържанието комбинира текст и графика. Всички текстови елементи (заглавия, резюмета, списъци с платформи, имена на компании, дати) са в UTF‑8 и следват ISO форматите. Резюметата са чист текст без HTML тагове, за да се предотврати инжектиране на код. Графичните ресурси са осем PNG изображения с размер 1.5–3.2~MB, достъпни чрез непарснати ентитети; XSLT ги вмъква с \texttt{unparsed-entity-uri()}.
@@ -420,18 +424,28 @@ xmllint --noout --schema catalog.xsd catalog.xml
 
 \section{Използване на изкуствен интелект}
 \label{sec:ai}
-Изкуственият интелект беше използван ограничено – основно като помощник за формулиране на резюмета и идеи за структура (XSLT/CSS/JS), без да се генерира или внедрява код директно. Всички предложения бяха проверени и коригирани ръчно спрямо фактите и учебните изисквания; валидирането и архитектурните решения остават изцяло човешки контролирани.
+Изкуственият интелект беше използван целенасочено и ограничено. Основната му роля беше помощ при формулиране/редакция на текстови части и идеи за оформление; архитектурата, XML моделирането, XSD, XSLT, JS и данните са разработени ръчно. Ако се наложи генериране на неутрални икони/изображения (напр. за демонстрации), то се прави чрез text-to-image модел с кратки промптове, без фактическо съдържание и без търговски марки.
+
+Цел: бързо създаване на илюстративно съдържание и текстова редакция, без влияние върху логиката или данните. Модел/среда: интерактивно text-to-image с контрол върху стил/цветове. Принципи за промптовете: неутралност, липса на марки, подходящ стил за уеб каталог. Оценка на генерираното: яснота, липса на подвеждащи детайли, съвместимост с дизайна, универсалност. Финален контрол: всичко минава през ръчна проверка и XSD валидация; ИИ е помощен инструмент, а коректността остава отговорност на авторите.
 
 \section{Тестване}
 \label{sec:testing}
-Тестването включваше:
-\begin{itemize}
-  \item \textbf{Валидация на XML} – проверка с \texttt{xmllint} за валидност спрямо XSD.
-  \item \textbf{Визуален преглед} – зареждане на \texttt{catalog.xml} и статичния \texttt{test\_output.html} в различни браузъри.
-\item \textbf{Функционални тестове} – тестване на търсачката, филтъра по жанр и сортирането на всички колони, проверка за правилно зареждане на изображенията.
-\end{itemize}
-Среда: Chrome/Edge/Firefox (актуални версии), локален прост HTTP сървър при нужда. Сценарии: сортиране по дата (ISO), търсене с главни/малки букви, филтър по жанр, проверка на счупен ентитет (очаквана грешка при валидация), липсващ жанр (очакван отказ от XSD). Препоръчителна автоматизация: \texttt{make validate} с \texttt{xmllint --noout --schema catalog.xsd catalog.xml} и \texttt{xsltproc catalog.xsl catalog.xml > /tmp/out.html}.
-Допълнително бяха проверени: коректно парсиране на ISO дати при сортиране; устойчивост на търсачката към главни/малки букви; липса на счупени \texttt{src} за изображения; отсъствие на грешки в конзолата. Препоръчително е при всяко добавяне на игра да се пусне \texttt{xmllint} и визуален преглед в поне два браузъра.
+Среда: Chrome/Edge/Firefox (актуални версии), локален прост HTTP сървър при нужда. Сценарии: сортиране по дата (ISO), търсене с главни/малки букви, филтър по жанр, проверка на счупен ентитет (очаквана грешка при валидация), липсващ жанр (очакван отказ от XSD), коректно парсиране на дати, липса на счупени \texttt{src} за изображения, отсъствие на грешки в конзолата.
+
+\subsection{Валидация на XML съдържанието}
+Команда: \texttt{xmllint --schema catalog.xsd catalog.xml}. Проверяват се задължителни елементи/атрибути, \texttt{ID}/\texttt{IDREF}, \texttt{key}/\texttt{keyref} и валидни enum стойности за \texttt{image}. Основната проверка е локална; при нужда може и онлайн валидатор.
+
+\subsection{Тестване на XSLT трансформацията}
+Потвърдено е, че \texttt{catalog.xsl} обхожда всички игри, резолвира жанрове и компании, визуализира атрибутите (\texttt{releaseDate}, \texttt{genreId}, \texttt{image}) и генерира нужните HTML атрибути (напр. \texttt{data-genre}). Резултатният HTML отразява данните точно.
+
+\subsection{Тестване на визуализацията и стилизирането}
+В Chrome/Firefox/Edge е проверено подравняването на таблицата, четимостта на текстовете, зареждането на изображенията и консистентността на интерфейса при различни размери на прозореца.
+
+\subsection{Тестване на интерактивната функционалност}
+Ръчно е проверено: филтър по жанр, търсене по заглавие (case-insensitive), сортиране по заглавие/дата, обновяване на редовете без презареждане и липса на JS грешки в конзолата.
+
+\subsection{Обобщение на резултатите}
+Компонентите работят коректно самостоятелно и заедно: XML е валиден, XSLT трансформацията е точна, визуализацията е стабилна, интерактивността функционира в тестовите браузъри.
 
 \textbf{Автоматизация (примерни команди):}
 \begin{verbatim}
@@ -536,6 +550,13 @@ make serve           # python3 -m http.server 8000
 
 В бъдеще каталогът може да се разшири с оценки и ревюта, филтри по платформи и времеви интервали, локализация на интерфейса, генериране на PDF чрез XSL‑FO и по‑строга типизация (например отделна колекция за платформи). Други идеи включват йерархия на жанровете, интеграция с външни API за автоматично обновяване на данните и версия на мобилно приложение. Планирани разширения: поддръжка на поджанрове и PEGI/ESRB рейтинги; филтри по платформа и диапазон дати; PDF изход чрез XSL‑FO; локализация на интерфейса; по‑строга типизация на платформи чрез отделен \texttt{enum}/колекция; интеграция с външни API за автоматично обновяване на каталога.
 Практическа приложимост: подходът е подходящ за малки/средни каталози, офлайн справочници и учебни демонстрации. Поддръжка: при обновяване се следва checklist от апендикса (данни → \texttt{DOCTYPE}/XSD → \texttt{xmllint} → визуален преглед → по желание \texttt{xsltproc}). При нужда от по-мащабно решение може да се въведе бекенд или API синхронизация, но текущият файл-базиран модел остава лек и преносим.
+
+\textbf{Критерии за приемане}:
+\begin{itemize}[topsep=0pt]
+  \item \texttt{catalog.xml} валиден срещу \texttt{catalog.xsd} (\texttt{xmllint} без грешки).
+  \item Всички изображения зареждат коректно чрез ENTITY и \texttt{unparsed-entity-uri()}.
+  \item Търсене, филтър по жанр и сортиране работят в поне два браузъра.
+\end{itemize}
 
 \section{Разпределение на работата}
 \label{sec:work-distribution}
