--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -594,6 +594,9 @@ make serve           # python3 -m http.server 8000
   \item \texttt{libxml2}/\texttt{xmllint} Documentation. Достъпно на: \url{http://xmlsoft.org/}.
   \item Материали по „XML технологии за семантичен Уеб“ (Moodle на курса).
   \item Wikipedia статии за датите и платформите на игрите: Elden Ring, DOOM Eternal, Minecraft, Tetris, The Witcher 3, Super Mario Odyssey, Baldur's Gate 3.
+  \item \texttt{libxslt}/\texttt{xsltproc} Documentation. Достъпно на: \url{http://xmlsoft.org/xslt.html}.
+  \item MDN Web Docs: XSLT in the Browser (XSLTProcessor, transformToDocument). Достъпно на: \url{https://developer.mozilla.org/en-US/docs/Web/API/XSLTProcessor}.
+  \item Liquid Technologies Online XSD Validator (използван за допълнителна проверка на \texttt{catalog.xml} и \texttt{catalog.xsd}). Достъпно на: \url{https://www.liquid-technologies.com/online-xsd-validator}.
 \end{enumerate}
 
 \section{Апендикс}
