--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -424,9 +424,9 @@ xmllint --noout --schema catalog.xsd catalog.xml
 
 \section{Използване на изкуствен интелект}
 \label{sec:ai}
-Изкуственият интелект беше използван целенасочено и ограничено. Основната му роля беше помощ при формулиране/редакция на текстови части и идеи за оформление; архитектурата, XML моделирането, XSD, XSLT, JS и данните са разработени ръчно. Ако се наложи генериране на неутрални икони/изображения (напр. за демонстрации), то се прави чрез text-to-image модел с кратки промптове, без фактическо съдържание и без търговски марки.
+Изкуственият интелект беше използван целенасочено и ограничено: (1) помощ при формулиране/редакция на текстови части и идеи за оформление; (2) генериране на неутрални изображения за игрите чрез text-to-image промптове (без фактическо съдържание и търговски марки). Архитектурата, XML моделирането, XSD, XSLT, JS и данните са разработени ръчно; ИИ не е използван за логика или структура.
 
-Цел: бързо създаване на илюстративно съдържание и текстова редакция, без влияние върху логиката или данните. Модел/среда: интерактивно text-to-image с контрол върху стил/цветове. Принципи за промптовете: неутралност, липса на марки, подходящ стил за уеб каталог. Оценка на генерираното: яснота, липса на подвеждащи детайли, съвместимост с дизайна, универсалност. Финален контрол: всичко минава през ръчна проверка и XSD валидация; ИИ е помощен инструмент, а коректността остава отговорност на авторите.
+Генериране на изображения: използвани са кратки промптове с контрол върху стил и цветове, целящи универсални икони/визуализации. Оценка: яснота, липса на подвеждащи детайли, съвместимост с дизайна. Всички файлове минават през ръчна проверка и XSD валидация; ИИ е помощен инструмент, а коректността остава отговорност на авторите.
 
 \section{Тестване}
 \label{sec:testing}
