--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -131,7 +131,7 @@
 \small
 \begin{tabularx}{\textwidth}{|l|X|X|}
 \hline
-\textbf{Поле} & \textbf{Невалидно} & \textbf{Резултат от XSD/валидатор} \\
+\rowcolor{gray!15}\textbf{Поле} & \textbf{Невалидно} & \textbf{Резултат от XSD/валидатор} \\
 \hline
 \texttt{game/@genreId} & Стойност, която не съществува в \texttt{genres/genre/@id} & \texttt{keyref gameGenreRef: Element 'game', attribute 'genreId'} нарушава ключ \\
 \hline
@@ -549,7 +549,7 @@ make serve           # python3 -m http.server 8000
 \small
 \begin{tabularx}{0.9\textwidth}{|l|X|l|}
 \hline
-\textbf{#} & \textbf{Дейност} & \textbf{Отговорник} \\
+\rowcolor{gray!15}\textbf{#} & \textbf{Дейност} & \textbf{Отговорник} \\
 \hline
 1 & Събиране и проверка на данни (игри, жанрове, платформи, компании) & Ивайло Кънчев \\
 \hline
