--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\includepdf[pages=1,pagecommand={\thispagestyle{empty}},fitpaper=true]{documentation/XML2025_projectNo_studentNames_facNos-template.pdf}
+\includepdf[pages=1,pagecommand={\thispagestyle{empty}},fitpaper=true]{pattern.pdf}
 \clearpage
 
 \pagenumbering{roman}
