--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -25,7 +25,7 @@
 \fancyhead[L]{Каталог на видеоигри}
 \fancyhead[R]{\leftmark}
 \fancyfoot[C]{\thepage}
-\setlength{\headheight}{15pt}
+\setlength{\headheight}{16pt}
 
 % Section formatting
 \usepackage{titlesec}
@@ -41,7 +41,6 @@
 \usepackage{enumitem}
 
 % Hyperlinks
-\usepackage[hidelinks]{hyperref}
 \usepackage[hidelinks]{hyperref}
 \usepackage{pdfpages}
 
@@ -549,7 +548,7 @@ make serve           # python3 -m http.server 8000
 \small
 \begin{tabularx}{0.9\textwidth}{|l|X|l|}
 \hline
-\rowcolor{gray!15}\textbf{#} & \textbf{Дейност} & \textbf{Отговорник} \\
+\rowcolor{gray!15}\textbf{\#} & \textbf{Дейност} & \textbf{Отговорник} \\
 \hline
 1 & Събиране и проверка на данни (игри, жанрове, платформи, компании) & Ивайло Кънчев \\
 \hline
